@@ -1,3 +1,7 @@
+2016-04-09 0.7.1 beta
+Add the fuse mechanism to avoid black midi blocking the
+main thread.
+
 2016-04-08 0.7.1 beta
 Add MIDI activity indicator.
 Substract time taken by sending midi data from sleep time.
